--- a/usersys/grammars/templatehtml/templates/payment_status.html
+++ b/usersys/grammars/templatehtml/templates/payment_status.html
@@ -10,7 +10,7 @@
             <py:otherwise>
                 <p>
                     We have received the second acknowledgement for payment with ID "<b>${data.header['payment_identifier']}</b>".
-                    The status each transaction in the payment can be found below:
+                    The status of each transaction in the payment can be found below:
                 </p>
             </py:otherwise>
         </py:choose>
